feat: Concurrent API Lab — StructuredTaskScope 고객 통합조회
- Java 27 Preview StructuredTaskScope로 프로필·주문·추천 API를 순차/병렬 비교하는 concurrentlab을 추가
- README에 concurrentlab 학습 기록 반영